--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <div class="icons">
                     <i class="fab fa-facebook-f"></i>
                     <i class="fab fa-twitter"></i>
-                    <i class="fab fa-youtube"></i>
+                    <i class="fab gi"></i>
                 </div>
                 <div class="copy-right">
                     <p>all-right || reserved || &copy; <span>Majharul islam</span></p>
